# twitter-microservice

./: .env.example  .gitignore  CLAUDE.md  INTEGRATION_TESTS.md  Makefile  PHASE_1_TODO.md  PORTFOLIO_FIXES.md  README.md  TESTING.md  WEEK_1_IMPLEMENTATION_GUIDE.md  docker-compose.yml
.claude/: settings.local.json
feed/: Dockerfile  main.py  pyproject.toml  requirements.txt
feed-worker/: Dockerfile  README.md  go.mod  go.sum  main.go  main_test.go
feed-worker/producer/: consumer.py  producer.py  users.json
feed-worker/user/: Makefile  user.pb.go  user.proto  user_grpc.pb.go
feed/src/: __init__.py
feed/src/dependencies/: auth.py  config.py  db.py  mq.py  redis.py
feed/src/grpc/client/: __init__.py  user_service_pb2.py
feed/src/grpc/server/: __init__.py
feed/src/routes/: __init__.py
feed/tests/: __init__.py  conftest.py  test_redis.py  test_routes.py
proto/: tweet_service.proto  user_service.proto
search/: Dockerfile  config.toml  pyproject.toml  requirements.txt
search-worker/: Dockerfile  elasticsearch.go  go.mod  go.sum  main.go  main_test.go  rabbitmq.go  util.go
search-worker/producer/: producer.py
search/src/: __init__.py  models.py
search/tests/: __init__.py  conftest.py  test_elasticsearch.py  test_routes.py
tests/e2e-tests/: test_full_workflow.py
tests/locust-tests/: test_auth_and_tweet.py
tweets/: pyproject.toml
tweets/src/: models.py  schemas.py
tweets/tests/: __init__.py  conftest.py  test_models.py  test_routes.py
users/: .env_dep  demo_di.py  pyproject.toml  pytest.ini
users/src/: __init__.py  models.py  schemas.py
(+27 files in other folders)
